[gd_scene load_steps=3 format=2]

[ext_resource path="res://characters/player/Muzzle.gd" type="Script" id=1]
[ext_resource path="res://characters/bullet/KnBullet.tscn" type="PackedScene" id=2]

[node name="Muzzle" type="Position2D"]
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="GunTimer" type="Timer" parent="."]
[connection signal="shoot" from="." to="." method="_on_Muzzle_shoot"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
